Fixed #311
- Hiding scrollbars for webkit browsers in sim exhcange
- Setting scroll height for tables
- Removed pagination numbers for tables

--- a/src/less/SimExchange.less
+++ b/src/less/SimExchange.less
@@ -152,15 +152,14 @@
         font-size: 12px;
         color: #cccccc;
         font-weight: 300;
-        padding-top: 10px;
-        padding-bottom: 0px;
+        padding: 10px 0 15px 15px;
     }
 
     .ant-table-tbody > tr > td {
         background: #181e26;
         border-bottom: none;
-        padding-bottom: 0;
-        padding-top: 10px;
+        padding-bottom: 5px;
+        padding-top: 5px;
     }
 
     .info-icon {
@@ -170,6 +169,12 @@
         padding-left: 10px;
         font-weight: 300;
         font-size: 12px;
+        cursor: pointer;
+    }
+
+    // Hiding ugly default scrollbars in windows for webkit browsers
+    ::-webkit-scrollbar {
+        display: none;
     }
 }
 
